new: add gorilla/mux

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,5 @@ package: apple-product-guide
 import:
 - package: github.com/PuerkitoBio/goquery
   version: ^1.5.0
+- package: github.com/gorilla/mux
+  version: ^1.7.3
