--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ^1.5.0
 - package: github.com/gorilla/mux
   version: ^1.7.3
+- package: github.com/robfig/cron
+  version: ^3.0.0
